[package]
name = "there-is-always-a-reason"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]

version = "0.1.0"

edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
deutsche-bahn-delay-reasons = "1"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
lto = true
opt-level = 's'
